--- a/requirements.txt
+++ b/requirements.txt
@@ -51,10 +51,14 @@ scipy==1.6.1
 scispacy==0.4.0
 sentence-transformers==0.4.1.2
 spacy==3.0.5
+spacy-transformers==1.0.1
+# spaCy 3.0.5 requires cupy-cuda102 < 9.0.0.
+cupy-cuda102==8.6.0
 typer==0.3.2
 srsly==2.4.0
 sphinx-bluebrain-theme==0.2.4
 torch==1.7.0
 tox==3.22.0
 tqdm==4.57.0
-transformers==4.3.2
+# spacy-transformers 1.0.1 requires transformers < 4.3.0.
+transformers==4.2.2
