--- a/data_and_models/pipelines/ner/spacy_transformers/dvc.yaml
+++ b/data_and_models/pipelines/ner/spacy_transformers/dvc.yaml
@@ -3,7 +3,7 @@ stages:
     cmd: >-
       python -m spacy train
       config.cfg
-      --output ../../models/ner/biobert_cord19/
+      --output ../../../models/ner/biobert_cord19/
       --gpu-id 0
       --paths.train ../../../annotations/ner/annotations15_EmmanuelleLogette_2020-09-22_raw9_Pathway.train.spacy
       --paths.dev ../../../annotations/ner/annotations15_EmmanuelleLogette_2020-09-22_raw9_Pathway.dev.spacy
