--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ Flask==1.1.2
 PyYAML==5.4.1
 SQLAlchemy==1.3.23
 Sphinx==3.5.1
+cryptography==3.4.7
 docker==4.4.3
 dvc[ssh]==2.0.6
 gunicorn==20.0.4
